--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "nodemon": "^1.17.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^2.1.5"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1"
   }
 }
